Add code to HTML file

--- a/prework-study-guide (d)/index.html
+++ b/prework-study-guide (d)/index.html
@@ -12,8 +12,44 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
-    </main>
+      
+      <section class="card" id "html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li> The head element contains informatio about the webpage </li>
+          <li> The body element represents the visual aspect for the user </li>
+          <li> Unlike in Javascript the semicolin isn't used in HTML </li>
+          <li> HTMl is used to create the framework of th website itself (Javascript and CSS allows elemnts to be used on the site) </li>
+          <li> The use of the aligator brackets are necessarcy for writing in HTML </li>
+        </ul>
+      </section>
+
+      <section class="card" id "Css-section">
+        <h2> CSS</h2>
+        <ul>
+          <li> My Css notes goes here </li>
+        </ul>
+      </section>
+
+      <section class="card" id "Git-section">
+        <h2>GitHub</h2>
+        <ul>
+          <li> Github is an online site used to store and hold Repos </li>
+          <li> Github allows for many coders to work and write on the same code at the same time </li>
+          <li> Github will take the diffrent branches and merge them together well checking all the new code to make sure it all flows </li>
+          <li> Github is great for preventing the main code from becoming broken </li>
+          <li> Github is free website that main diffrent compaines </li>
+        </ul>
+      </section>
+
+      <section class="card" id "Javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li> Notes about Javascript</li>
+        </ul>
+      </section>
+    
+    </main> 
 
     <footer>
       <p>I can code!</p>
