Added CSS to project

--- a/prework-study-guide (d)/index.html
+++ b/prework-study-guide (d)/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,7 +28,11 @@
       <section class="card" id "Css-section">
         <h2> CSS</h2>
         <ul>
-          <li> My Css notes goes here </li>
+          <li> CSS style files need to be connected to the index with code in the head </li>
+          <li> Margin indicates how much space we want around the outside of the element</li>
+          <li> Padding indicates how much room we want around the content inside the element</li>
+          <li> Most css lines need to ended with a semicolin </li>
+          <li> CSS is used to give orginzation and color to the website </li>
         </ul>
       </section>
 
