--- a/prework-study-guide (d)/index.html
+++ b/prework-study-guide (d)/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       
@@ -50,7 +51,9 @@
       <section class="card" id "Javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li> Notes about Javascript</li>
+          <li> Javascript can add interactivity to the website </li>
+          <li> Javascript can be used to create animations </li>
+          <li> Javascript is linked to the HTMl under footer section </li>
         </ul>
       </section>
     
@@ -59,5 +62,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
