the finishing touches on Javascript

--- a/prework-study-guide (d)/index.html
+++ b/prework-study-guide (d)/index.html
@@ -12,7 +12,7 @@
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
       <h2>✨ Open the Console to See What's Happening ✨</h2>
-    </header>
+    </header> 
     <main>
       
       <section class="card" id "html-section">
@@ -54,6 +54,8 @@
           <li> Javascript can add interactivity to the website </li>
           <li> Javascript can be used to create animations </li>
           <li> Javascript is linked to the HTMl under footer section </li>
+          <li> Javascript is used to make the website fully functional </li>
+          <li> Javascript is kind of like the behind the scenes to a website </li>
         </ul>
       </section>
     
