Adding more notes and expanding the README file

--- a/prework-study-guide (d)/index.html
+++ b/prework-study-guide (d)/index.html
@@ -18,6 +18,12 @@
       <section class="card" id "html-section">
         <h2>HTML</h2>
         <ul>
+          <li> HTML stands for Hypertext Markup Language </li>
+          <li> HTML cannont be used in a CSS file </li>
+          <li> A simplier language that isn't case-sensitive </li>
+          <li> Carries display information for the webpage </li>
+          <li> Runs from the index in the files of a repo </li>
+          <li> Useful for adding images and videos to a webpage </li>
           <li> The head element contains informatio about the webpage </li>
           <li> The body element represents the visual aspect for the user </li>
           <li> Unlike in Javascript the semicolin isn't used in HTML </li>
@@ -29,6 +35,13 @@
       <section class="card" id "Css-section">
         <h2> CSS</h2>
         <ul>
+          <li> Stands for Cascading Style Sheet </li>
+          <li> Code worked on in files ending in .css </li>
+          <li> Used to make webpage presentable </li>
+          <li> CSS breaks down to internal, external, and inline CSS </li>
+          <li> Internal CSS is used for styling three to four emlemnts at a time, it is held in the head of the HTML </li>
+          <li> External CSS is used to bring in external CSS files and held in the head of HTML </li>
+          <li> Inline CSS for single line styling within any tag </li>
           <li> CSS style files need to be connected to the index with code in the head </li>
           <li> Margin indicates how much space we want around the outside of the element</li>
           <li> Padding indicates how much room we want around the content inside the element</li>
@@ -42,9 +55,14 @@
         <ul>
           <li> Github is an online site used to store and hold Repos </li>
           <li> Github allows for many coders to work and write on the same code at the same time </li>
+          <li> Pull system allows for mulitple editors to double check ones work and safelty merge code </li>
           <li> Github will take the diffrent branches and merge them together well checking all the new code to make sure it all flows </li>
+          <li> Allows for the possiblity for world-wide collaboration with multiple developers </li>
           <li> Github is great for preventing the main code from becoming broken </li>
+          <li> Creates one safe location for huge projects to hold all thier files  </li>
           <li> Github is free website that main diffrent compaines </li>
+          <li> Tracks file changes on a local system and makes it easier to track errors </li>
+          <li> Has a VCS to protect all the diffent versions of the main code incase somehting breaks </li>
         </ul>
       </section>
 
@@ -52,7 +70,14 @@
         <h2>Javascript</h2>
         <ul>
           <li> Javascript can add interactivity to the website </li>
+          <li> Script tag is used for JS in HTML </li>
+          <li> An Error code in JS will stop the whole process </li>
+          <li> Applied to HTML </li>
+          <li> Saved in a .js file </li>
           <li> Javascript can be used to create animations </li>
+          <li> Can be used server-side and user-side </li>
+          <li> Considered to be the language to create the first dynamic webpages </li>
+          <li> Functions in JS ar consider objects </li>
           <li> Javascript is linked to the HTMl under footer section </li>
           <li> Javascript is used to make the website fully functional </li>
           <li> Javascript is kind of like the behind the scenes to a website </li>
